--- a/home.html
+++ b/home.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<link rel="icon" type="image/x-icon" href=""/>
 </head>
 
-<body class="bg-light" style="color: #073b4c !important">
+<body class="bg-light" >
 
     <nav>
         <a href="home.html">Home</a>
@@ -23,18 +22,20 @@
     </nav>
 
     <div>
-        <div class="column" style="flex: 35%; text-align: center;"></div>
+        <a class="column">
             <a href="search.html" class="list-group-item list-group-item-primary">Search Games </a>
+        </ul>
+           
 
-        <div class="column" style="flex: 35%; text-align: center;">
+        <div class="column" >
             <a href="add.html" class="list-group-item list-group-item-secondary">Add Game </a>
         </div>
 
-        <div class="column" style="flex: 35%; text-align: center;">
+        <div class="column" >
             <a href="delete.html" class="list-group-item list-group-item-danger">Delete Game </a>
         </div>
 
-        <div class="column" style="flex: 35%; text-align: center;">
+        <div class="column" >
             <a href="mygames.html" class="list-group-item list-group-item-warning">My Games</a>
         </div>
     </div>
