added rule for input

--- a/delete.html
+++ b/delete.html
@@ -12,16 +12,11 @@
 	<link rel="icon" type="image/x-icon" href=""/>
 </head>
 
-<style>
-	table, th, td {
-	  border:1px solid black;
-	}
-</style>
 
 
 <body class="bg-light" style="color: #073b4c !important">
 
-    <navs>
+    <nav>
         <a href="home.html">Home</a>
         <a href="search.html">Search</a>
         <a href="add.html">Add</a>
