small edit, current count is 6

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <a href="delete.html">Delete</a>
         <a href="mygames.html">My Games</a>
     </nav>
-    <img src="login.jpeg" alt="Italian Trulli">
+    <img src="login.jpeg" alt="login">
     <div>
         <a class="column">
             <a href="search.html" class="list-group-item list-group-item-primary">Search Games </a>
