--- a/add.html
+++ b/add.html
@@ -21,28 +21,28 @@
         <a href="mygames.html">My Games</a>
     </nav>
 	
-    <div class="column" style="flex: 35%; text-align: left;">
+    <div class="column grid-cont" style="flex: 35%; text-align: left;">
 
         <form method="POST" action="home.html">
-			<input type="text" name="gameID"> Game_ID <br>
-			<input type="text" name="time_increment"> Time Increment (ex: 15+10) <br>
+			<input type="text" class= "grid-item" name="gameID"> Game_ID <br>
+			<input type="text" class= "grid-item" name="time_increment"> Time Increment (ex: 15+10) <br>
 
-			<input type="text" name="opening_name"> Opening Name <br>
-			<input type="text" name="opening_eco"> Opening Eco (ex: d00) <br>
+			<input type="text" class= "grid-item" name="opening_name"> Opening Name <br>
+			<input type="text" class= "grid-item" name="opening_eco"> Opening Eco (ex: d00) <br>
 
-			<input type="text" name="black_ID"> Black ID <br>
-			<input type="text" name="black_rating"> Black Rating <br>
+			<input type="text" class= "grid-item" name="black_ID"> Black ID <br>
+			<input type="text" class= "grid-item" name="black_rating"> Black Rating <br>
 
-			<input type="text" name="white_ID"> White ID <br>
-			<input type="text" name="white_rating"> White Rating <br>
+			<input type="text" class= "grid-item" name="white_ID"> White ID <br>
+			<input type="text" class= "grid-item" name="white_rating"> White Rating <br>
 
-			<input type="text" name="move_list"> Move List (ex: d1 c4 a0...) <br>
+			<input type="text" class= "grid-item" name="move_list"> Move List (ex: d1 c4 a0...) <br>
 
-			<input type="text" name="Number_of_Turns"> Number of Turns <br>
+			<input type="text" class= "grid-item" name="Number_of_Turns"> Number of Turns <br>
 
-			<input type="text" name="StartTime"> Start Time <br>
+			<input type="text" class= "grid-item" name="StartTime"> Start Time <br>
 
-			<input type="text" name="EndTime"> End Time <br>
+			<input type="text" class= "grid-item" name="EndTime"> End Time <br>
 			
 			<select name="Winner" id="Winner">
 				<option value="white">White</option>
