--- a/add.html
+++ b/add.html
@@ -88,7 +88,8 @@
 			<select class="dynamicAlign" name="rated" id="rated">
 				<option value="1">Rated</option>
 				<option value="0">Unrated</option>
-			</select> Rated <br>
+			</select> Rated <br> 
+			<br> </form>
 			<button type="submit">Add</button>
 		</form>
 
