--- a/delete.html
+++ b/delete.html
@@ -28,7 +28,7 @@
 
         <form method="POST" action="home.html">
 
-			<input type="text" class="input:focus" name="KeyValue"> Which row do you want to delete? <br>
+			<input type="text" class=":focus" name="KeyValue"> Which row do you want to delete? <br>
 
 			<button type="submit">Delete</button>
 		</form>
