--- a/add.html
+++ b/add.html
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<link rel="icon" type="image/x-icon" href=""/>
+	<link rel="icon" type="image/x-icon" href="index.html"/>
 </head>
 <body class="bg-light" style="color: #073b4c !important">
 
 	<nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
 		<a href="search.html">Search</a>
         <a href="add.html">Add</a>
         <a href="delete.html">Delete</a>
@@ -23,73 +23,88 @@
 	
     <div>
 
-        <form method="POST" action="home.html">
+        <form method="POST" action="index.html">
 			<div>
-				<input type="text" name="gameID"> Game_ID <br>
+				<input type="text" id= "gameID" name="gameID">
+				<label for="gameID">Game_ID</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="time_increment"> Time Increment (ex: 15+10) <br>
+				<input type="text" id= "time_increment" name="time_increment">
+				<label for="time_increment">Time Increment</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="opening_name"> Opening Name <br>
+				<input type="text" id= "opening_name" name="opening_name">  
+				<label for="opening_name"> Opening Name</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="opening_eco"> Opening Eco (ex: d00) <br>
+				<input type="text" id= "opening_eco" name="opening_eco">
+				<label for="opening_eco"> Opening Eco</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="black_ID"> Black ID <br>
+				<input type="text" id= "black_ID" name="black_ID">
+				<label for="black_ID">Black ID</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="black_rating"> Black Rating <br>
+				<input type="text" id= "black_rating" name="black_rating">
+				<label for="black_rating">Black Rating</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="white_ID"> White ID <br>
+				<input type="text" id= "white_ID" name="white_ID">
+				<label for="white_ID">White ID</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="white_rating"> White Rating <br>
+				<input type="text" id= "white_rating" name="white_rating">
+				<label for="white_rating">White Rating</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="move_list"> Move List (ex: d1 c4 a0...) <br>
+				<input type="text" id= "move_list" name="move_list"> 
+				<label for="move_list">Move List</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="Number_of_Turns"> Number of Turns <br>
+				<input type="text" id= "Number_of_Turns" name="Number_of_Turns">
+				<label for="Number_of_Turns">Number of Turns</label><br>
 			</div>
 
 			<div>
-				<input type="text" name="StartTime"> Start Time <br>
+				<input type="text" id= "StartTime" name="StartTime"> 
+				<label for="StartTime">Start Time</label><br>
 			</div>
 			
 			<div>
-				<input type="text" name="EndTime"> End Time <br>
+				<input type="text" id= "EndTime" name="EndTime">
+				<label for="EndTime">End Time</label><br>
 			</div>
 			
 			<select class = "dynamicAlign" name="Winner" id="Winner">
-				<option value="white">White</option>
-				<option value="black">Black</option>
-				<option value="draw">Draw</option>
-			</select> Winner <br>
+					<option value="white">White</option>
+					<option value="black">Black</option>
+					<option value="draw">Draw</option>
+			</select>
+			<label for="Winner">Winner</label><br>
 
 			<select class = "dynamicAlign" name="VictoryStatus" id="VictoryStatus">
 				<option value="mate">Checkmate</option>
 				<option value="resign">Resign</option>
 				<option value="outoftime">Out of Time</option>
 				<option value="draw">Draw</option>
-			</select> Victory Status <br>
+			</select> 
+			<label for="VictoryStatus"> Victory Status </label><br>
 
 			<select class="dynamicAlign" name="rated" id="rated">
 				<option value="1">Rated</option>
 				<option value="0">Unrated</option>
-			</select> Rated <br> 
-			<br> </form>
+			</select> 
+			<label for="rated">Rated</label><br> 
+			<br>
 			<button type="submit">Add</button>
 		</form>
 
