--- a/delete.html
+++ b/delete.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-	<link rel="icon" type="image/x-icon" href=""/>
+	<link rel="icon" type="image/x-icon" href="index.html"/>
 </head>
 
 
@@ -17,7 +17,7 @@
 <body class="bg-light" style="color: #073b4c !important">
 
     <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="search.html">Search</a>
         <a href="add.html">Add</a>
         <a href="delete.html">Delete</a>
@@ -26,10 +26,11 @@
 
     <div class="column" style="flex: 35%; text-align: left;">
 
-        <form method="POST" action="home.html">
-
-			<input type="text" class=":focus" name="KeyValue"> Which row do you want to delete? <br>
-
+        <form method="POST" action="index.html">
+            <div>
+                <input type="text" id="delete" name="delete">
+                <label for="delete"> Which game do you want to delete? </label><br>
+            </div>
 			<button type="submit">Delete</button>
 		</form>
 
