--- a/add.html
+++ b/add.html
@@ -22,7 +22,7 @@
     </nav>
 	
     <div>
-
+		<!-- code for taking in user input  -->
         <form method="POST" action="index.html">
 			<div>
 				<input type="text" id= "gameID" name="gameID">
@@ -90,7 +90,7 @@
 					<option value="draw">Draw</option>
 			</select>
 			<label for="Winner">Winner</label><br>
-
+			<!-- html code for adding the status using option -->
 			<select class = "dynamicAlign" name="VictoryStatus" id="VictoryStatus">
 				<option value="mate">Checkmate</option>
 				<option value="resign">Resign</option>
