--- a/delete.html
+++ b/delete.html
@@ -15,7 +15,7 @@
 
 
 <body class="bg-light" style="color: #073b4c !important">
-
+<!-- nav -->
     <nav>
         <a href="index.html">Home</a>
         <a href="search.html">Search</a>
@@ -23,7 +23,7 @@
         <a href="delete.html">Delete</a>
         <a href="mygames.html">My Games</a>
     </nav>
-
+	<!-- inline css rule to change text alignment and flex -->
     <div class="column" style="flex: 35%; text-align: left;">
 
         <form method="POST" action="index.html">
